# Algorithms

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  create_task.sh
blank-task/: CMakeLists.txt  test.cpp
week10_efficiency/: hw_quantization.ipynb
